sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:9: error: not found: value j
			if(plusPetit(j, j+1) == false) {
                                     ^AlgCocktailSort1:10: error: not found: value j
				echange(j, j+1);
                                        ^AlgCocktailSort1:15: error: not found: value j
			if(plusPetit(j, j+1) == false) {
                                     ^AlgCocktailSort1:16: error: not found: value j
				echange(j, j+1);
                                        ^