sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {

	var length = getNombreValeurs();
	var tri = true;
	do {
		tri = false;
		for(i<-0 to length-2) {
			if(plusPetit(j, j+1) == false) {
				echange(j, j+1);
				tri = false;
			}
		}
		for(i<-length-2 to 0) {
			if(plusPetit(j, j+1) == false) {
				echange(j, j+1);
				tri = false;
			}
		}
	} while(tri == true)
}
